--- a/src/stm32proj/cubemx/stm32h7.ioc
+++ b/src/stm32proj/cubemx/stm32h7.ioc
@@ -2,37 +2,90 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-FREERTOS.IPParameters=Tasks01
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+Dma.Request0=SPI1_TX
+Dma.Request1=SPI1_RX
+Dma.RequestsNb=2
+Dma.SPI1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.1.EventEnable=DISABLE
+Dma.SPI1_RX.1.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SPI1_RX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SPI1_RX.1.Instance=DMA1_Stream1
+Dma.SPI1_RX.1.MemBurst=DMA_MBURST_SINGLE
+Dma.SPI1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.1.Mode=DMA_NORMAL
+Dma.SPI1_RX.1.PeriphBurst=DMA_PBURST_SINGLE
+Dma.SPI1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_RX.1.RequestNumber=1
+Dma.SPI1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_RX.1.SignalID=NONE
+Dma.SPI1_RX.1.SyncEnable=DISABLE
+Dma.SPI1_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_RX.1.SyncRequestNumber=1
+Dma.SPI1_RX.1.SyncSignalID=NONE
+Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.0.EventEnable=DISABLE
+Dma.SPI1_TX.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SPI1_TX.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SPI1_TX.0.Instance=DMA1_Stream0
+Dma.SPI1_TX.0.MemBurst=DMA_MBURST_SINGLE
+Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.0.Mode=DMA_CIRCULAR
+Dma.SPI1_TX.0.PeriphBurst=DMA_PBURST_SINGLE
+Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.0.RequestNumber=1
+Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_TX.0.SignalID=NONE
+Dma.SPI1_TX.0.SyncEnable=DISABLE
+Dma.SPI1_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_TX.0.SyncRequestNumber=1
+Dma.SPI1_TX.0.SyncSignalID=NONE
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,FootprintOK
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,24,128,StartTask02,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=
 KeepUserPlacement=false
 Mcu.CPN=STM32H743VIT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
-Mcu.IP1=FREERTOS
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IPNb=6
+Mcu.IP1=DMA
+Mcu.IP2=FREERTOS
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IPNb=7
 Mcu.Name=STM32H743VITx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC13
 Mcu.Pin1=PH0-OSC_IN (PH0)
+Mcu.Pin10=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin11=VP_SYS_VS_tim1
 Mcu.Pin2=PH1-OSC_OUT (PH1)
-Mcu.Pin3=PA5
-Mcu.Pin4=PA6
-Mcu.Pin5=PA7
-Mcu.Pin6=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin7=VP_SYS_VS_tim1
-Mcu.PinsNb=8
+Mcu.Pin3=PA0
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743VITx
 MxCube.Version=6.8.0
 MxDb.Version=DB.6.0.80
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -40,6 +93,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SPI1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
@@ -49,6 +103,22 @@ NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=RES
+PA0.Locked=true
+PA0.Signal=GPIO_Output
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=DC
+PA1.Locked=true
+PA1.Signal=GPIO_Output
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=CS
+PA2.Locked=true
+PA2.Signal=GPIO_Output
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=BLK
+PA3.Locked=true
+PA3.Signal=GPIO_Output
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Master
@@ -92,83 +162,88 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=129000000
-RCC.AHB12Freq_Value=75000000
-RCC.AHB4Freq_Value=75000000
-RCC.APB1Freq_Value=75000000
-RCC.APB2Freq_Value=75000000
-RCC.APB3Freq_Value=75000000
-RCC.APB4Freq_Value=75000000
-RCC.AXIClockFreq_Value=75000000
+RCC.AHB12Freq_Value=72000000
+RCC.AHB4Freq_Value=72000000
+RCC.APB1Freq_Value=72000000
+RCC.APB2Freq_Value=72000000
+RCC.APB3Freq_Value=72000000
+RCC.APB4Freq_Value=72000000
+RCC.AXIClockFreq_Value=72000000
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=64000000
-RCC.CortexFreq_Value=75000000
-RCC.CpuClockFreq_Value=75000000
-RCC.D1CPREFreq_Value=75000000
-RCC.DFSDMACLkFreq_Value=75000000
-RCC.DFSDMFreq_Value=75000000
+RCC.CortexFreq_Value=72000000
+RCC.CpuClockFreq_Value=72000000
+RCC.D1CPRE=RCC_SYSCLK_DIV2
+RCC.D1CPREFreq_Value=72000000
+RCC.DFSDMACLkFreq_Value=96000000
+RCC.DFSDMFreq_Value=72000000
 RCC.DIVM1=4
-RCC.DIVN1=9
-RCC.DIVP1Freq_Value=75000000
+RCC.DIVN1=18
+RCC.DIVP1Freq_Value=144000000
 RCC.DIVP2Freq_Value=129000000
 RCC.DIVP3Freq_Value=129000000
-RCC.DIVQ1Freq_Value=75000000
+RCC.DIVQ1=3
+RCC.DIVQ1Freq_Value=96000000
 RCC.DIVQ2Freq_Value=129000000
 RCC.DIVQ3Freq_Value=129000000
-RCC.DIVR1Freq_Value=75000000
+RCC.DIVR1Freq_Value=144000000
 RCC.DIVR2Freq_Value=129000000
 RCC.DIVR3Freq_Value=129000000
-RCC.FDCANFreq_Value=75000000
-RCC.FMCFreq_Value=75000000
+RCC.FDCANFreq_Value=96000000
+RCC.FMCFreq_Value=72000000
 RCC.FamilyName=M
-RCC.HCLK3ClockFreq_Value=75000000
-RCC.HCLKFreq_Value=75000000
-RCC.HRTIMFreq_Value=75000000
+RCC.HCLK3ClockFreq_Value=72000000
+RCC.HCLKFreq_Value=72000000
+RCC.HRTIMFreq_Value=72000000
 RCC.HSE_VALUE=8000000
-RCC.I2C123Freq_Value=75000000
-RCC.I2C4Freq_Value=75000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLFRACN,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Freq_Value=75000000
-RCC.LPTIM2Freq_Value=75000000
-RCC.LPTIM345Freq_Value=75000000
-RCC.LPUART1Freq_Value=75000000
+RCC.I2C123Freq_Value=72000000
+RCC.I2C4Freq_Value=72000000
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPRE,D1CPREFreq_Value,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLFRACN,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.LPTIM1Freq_Value=72000000
+RCC.LPTIM2Freq_Value=72000000
+RCC.LPTIM345Freq_Value=72000000
+RCC.LPUART1Freq_Value=72000000
 RCC.LTDCFreq_Value=129000000
 RCC.MCO1PinFreq_Value=64000000
-RCC.MCO2PinFreq_Value=75000000
-RCC.PLLFRACN=3072
-RCC.QSPIFreq_Value=75000000
+RCC.MCO2PinFreq_Value=144000000
+RCC.PLLFRACN=0
+RCC.QSPIFreq_Value=72000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=75000000
-RCC.SAI23Freq_Value=75000000
-RCC.SAI4AFreq_Value=75000000
-RCC.SAI4BFreq_Value=75000000
-RCC.SDMMCFreq_Value=75000000
-RCC.SPDIFRXFreq_Value=75000000
-RCC.SPI123Freq_Value=75000000
-RCC.SPI45Freq_Value=75000000
-RCC.SPI6Freq_Value=75000000
-RCC.SWPMI1Freq_Value=75000000
-RCC.SYSCLKFreq_VALUE=75000000
+RCC.SAI1Freq_Value=96000000
+RCC.SAI23Freq_Value=96000000
+RCC.SAI4AFreq_Value=96000000
+RCC.SAI4BFreq_Value=96000000
+RCC.SDMMCFreq_Value=96000000
+RCC.SPDIFRXFreq_Value=96000000
+RCC.SPI123Freq_Value=96000000
+RCC.SPI45Freq_Value=72000000
+RCC.SPI6Freq_Value=72000000
+RCC.SWPMI1Freq_Value=72000000
+RCC.SYSCLKFreq_VALUE=144000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.Tim1OutputFreq_Value=75000000
-RCC.Tim2OutputFreq_Value=75000000
+RCC.Tim1OutputFreq_Value=72000000
+RCC.Tim2OutputFreq_Value=72000000
 RCC.TraceFreq_Value=64000000
-RCC.USART16Freq_Value=75000000
-RCC.USART234578Freq_Value=75000000
-RCC.USBFreq_Value=75000000
-RCC.VCO1OutputFreq_Value=150000000
+RCC.USART16Freq_Value=72000000
+RCC.USART234578Freq_Value=72000000
+RCC.USBFreq_Value=96000000
+RCC.VCO1OutputFreq_Value=288000000
 RCC.VCO2OutputFreq_Value=258000000
 RCC.VCO3OutputFreq_Value=258000000
 RCC.VCOInput1Freq_Value=16000000
 RCC.VCOInput2Freq_Value=2000000
 RCC.VCOInput3Freq_Value=2000000
-SPI1.CalculateBaudRate=37.5 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI1.CLKPolarity=SPI_POLARITY_HIGH
+SPI1.CalculateBaudRate=24.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPolarity,NSSPMode
 SPI1.Mode=SPI_MODE_MASTER
+SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI1.VirtualType=VM_MASTER
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
